# napari-tools-menu

./: .gitignore  LICENSE  README.md  napari_tools_menu.py  requirements.txt  setup.cfg
napari_tools_menu/: __init__.py
tests/: test_register.py
