[metadata]
name = napari-tools-menu
version = 0.1.9
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-tools-menu
license = BSD-3-Clause
description = Attaches a customizable Tools menu to napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-tools-menu/issues
    Documentation = https://github.com/haesleinhuepf/napari-tools-menu#README.md
    Source Code = https://github.com/haesleinhuepf/napari-tools-menu
    User Support = https://github.com/haesleinhuepf/napari-tools-menu/issues

[options]
packages = find:
python_requires = >=3.7
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari


[options.entry_points] 
napari.plugin = 
    napari-tools-menu = napari_tools_menu
